chore: new scripts

--- a/package.json
+++ b/package.json
@@ -5,7 +5,12 @@
   "scripts": {
     "format": "npx prettier --write",
     "lint": "npx eslint . --max-warnings=0",
-    "prepare": "husky"
+    "format:check": "npx prettier . --check \"!**.ts\"",
+    "prepare": "husky",
+    "test": "npx playwright test",
+    "test:headed": "npm run test -- --headed",
+    "test:ui": "npm run test -- --ui",
+    "show-report": "npx playwright show-report"
   },
   "keywords": [],
   "author": "",
