--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "husky": "^9.1.7",
     "prettier": "3.6.2",
     "typescript-eslint": "^8.41.0"
+  },
+  "dependencies": {
+    "dotenv": "^17.2.2"
   }
 }
